--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,25 @@
 	<meta charset="utf-8" content="width=device-width, initial-scale=1.0"/>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="main.js"></script>
+
+    <style>
+        #messages {
+            width: 95%;
+            max-width: 400px;
+            height: 350px;
+            overflow-y: scroll;
+            border: 1px solid #eee;
+            box-shadow: 0px 0px 20px inset;
+        }
+
+        .message {
+            margin: 20px;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            background: white;
+        }
+    </style>
 </head>
 <body>
     <h1>Chat con socket.io y Node.js</h1>
