se modifico el puerto del server

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,9 @@
 <body>
     <h1>Chat con socket.io y Node.js</h1>
     <div id="messages">
-
+        <form>
+            <input />
+        </form>
     </div>
 </body>
 </html>
