--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,46 @@
 	<meta charset="utf-8" content="width=device-width, initial-scale=1.0"/>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <script>
+        //<![CDATA[
+        // Definir lista de extensiones y el tipo de fichero de audio asociado. Puedes añadir más
+        var html5_audiotypes = {
+            "mp3": "audio/mpeg",
+            "mp4": "audio/mp4",
+            "ogg": "audio/ogg",
+            "wav": "audio/wav"
+        }
+
+        function createsoundbite(sound) {
+            var html5audio = document.createElement('audio')
+            if (html5audio.canPlayType) { //Comprobar soporte para audio HTML5
+                for (var i = 0; i < arguments.length; i++) {
+                    var sourceel = document.createElement('source')
+                    sourceel.setAttribute('src', arguments[i])
+                    if (arguments[i].match(/.(w+)$/i))
+                        sourceel.setAttribute('type', html5_audiotypes[RegExp.$1])
+                    html5audio.appendChild(sourceel)
+                }
+                html5audio.load()
+                html5audio.playclip = function () {
+                    html5audio.pause()
+                    html5audio.currentTime = 0
+                    html5audio.play()
+                }
+                return html5audio
+            }
+            else {
+                return { playclip: function () { throw new Error('Su navegador no soporta audio HTML5') } }
+            }
+        }
+
+
+        //Nótese que se pueden añadir ficheros con otras extensiones para mayor compatibilidad
+        var click1 = createsoundbite('samsung_whistle.mp3');
+        //]]>
+    </script>
+
+
 
     <style>
         #messages {
@@ -32,7 +72,7 @@
     <form id="miForm" onsubmit="return addMessage(this);">
         <input name="nickname" id="nickname" type="text" placeholder="Nick" />
         <textarea id="text" placeholder="Mensaje"></textarea>
-        <input type="submit" value="Enviar" />
+        <input type="submit" onclick="click1.playclip()" value="Enviar" />
     </form>
 </body>
 </html>
