--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,7 @@
     <form id="miForm" onsubmit="return addMessage(this);">
         <input name="nickname" id="nickname" type="text" placeholder="Nick" />
         <textarea id="text" placeholder="Mensaje"></textarea>
-        <input type="submit" onclick="click1.playclip()" value="Enviar" />
+        <input type="submit" value="Enviar" />
     </form>
 </body>
 </html>
